Pagina de Info y mas organizacion

--- a/home/index.html
+++ b/home/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>KOI</title>
 </head>
 <body>
     
     <div class="container">
         <div class="koi">
-            <img src="img/SUMMA_KOSMOS_KOI_1-1200x900.png" alt="Koi">
+            <img src="../img/SUMMA_KOSMOS_KOI_1-1200x900.png" alt="Koi">
         </div>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
+            <a href="../Info/info.html">More</a>
         </nav>
     </div>
     <div class="content">
-        <img src="img/f.elconfidencial.com_original_e4f_ad6_c8e_e4fad6c8e10cd2d717aab6ff69e428b6.jpg" alt="Ibai">
+        <img src="../img/f.elconfidencial.com_original_e4f_ad6_c8e_e4fad6c8e10cd2d717aab6ff69e428b6.jpg" alt="Ibai">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est voluptate laborum accusamus molestias quaerat. Ullam ut cupiditate exercitationem repudiandae, atque beatae assumenda ducimus dignissimos quibusdam. Maxime ratione corporis praesentium et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat blanditiis quisquam, ut harum aperiam placeat, explicabo perspiciatis animi, tempore natus earum vero possimus. Dolorem natus aspernatur, repudiandae maxime consectetur sapiente.</p>
     </div>
 
