Page events añadida con un contador regresivo

--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="../Info/info.html">More</a>
+            <a href="../event/event.html">Events</a>
         </nav>
     </div>
     <div class="content">
